@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix regression where unintentional page reload was done after request abort (#1488802)
 - Fix excessive LFs at the end of composed message with top_posting=true (#1488797)
 - Fix bug where leading blanks were stripped from quoted lines (#1488795)
 
